Lower-case module names. Update test case.

--- a/pkg/testdata/simple_property_ref.yml
+++ b/pkg/testdata/simple_property_ref.yml
@@ -22,7 +22,7 @@ components:
           $ref: "#/components/schemas/a_string_prop"
 
 paths:
-  /v2/fakeresource:
+  /v2/fakeResource:
     post:
       operationId: create_fake_resource
       requestBody:
