--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "gopls": {
         "build.env": {
-            "GOPRIVATE": "github.com/cloudy-sky-software/pulumi-render,github.com/cloudy-sky-software/pulschema"
+            "GO111MODULE": "on"
         }
     },
     "yaml.schemas": {
