--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ on:
       - main
 
 env:
-  GOLANG_CI_LINT_VERSION: v2.1.5
   GO_VERSION: 1.25.x
 
 jobs:
@@ -26,10 +25,13 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin $GOLANG_CI_LINT_VERSION
-          make lint
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          # Use a commit hash from https://github.com/golangci/golangci-lint/commits/main.
+          version: 2e484ee1089a13d51500f5d1961c1313cbea8ffe
+          install-mode: goinstall
+          args: --config=.golangci.yaml --timeout=10m
 
       - name: Test
         run: make test
